--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "register-service-worker": "^1.6.2",
+    "store2": "^2.10.0",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
