--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "register-service-worker": "^1.6.2",
     "store2": "^2.10.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.1.0",
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.19.1",
     "scp2": "^0.5.0",
